# ks_event_scheduler

./: README.md  pyproject.toml
project/: bot_cmd_access.py  bot_utils.py  cg_account.py  cg_admin.py  cg_bot_check.py  cg_player.py  chi-to-utc.py  cmd_check.py  database.py  discord_paginator.py  discord_util.py  ks_bot_main.py  ks_db.py  ks_db_errors.py  ks_event_scheduler_bot.py  ks_event_scheduler_bot_main.py  output_tz_info.py  paged_text_view.py  read_env.py  redis_session.py  test_output_tz_info.py  tz-bot.py  tz_bot.py
project/sql/: drop_tables.sql  generate_TZ_inserts.py  operations_tables_create.sql  timezones_inserts.sql
redis_session_manager/files/: Dockerfile  README.md  bot.py  docker-compose.override.yml  docker-compose.yml  redis.conf  redis_session.py  requirements.txt
