[project]
name = "ks-event-scheduler"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "discord-py>=2.7.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "tznn>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
